renamed example files

--- a/example/example.tex
+++ b/example/example.tex
@@ -137,7 +137,7 @@
 
         \begin{tikzpicture}
         \node[at=(current page.center)] {
-          \includegraphics[width=0.55\paperwidth]{p1-figs/atlas.jpeg}
+          \includegraphics[width=0.55\paperwidth]{ex-figs/atlas.jpeg}
         };
         \end{tikzpicture}
         %More content goes here
