--- a/p1/pres.tex
+++ b/p1/pres.tex
@@ -59,13 +59,14 @@
 %        \end{multicols}
 %    }
 
+    \frame{
+      \frametitle{High Luminosity LHC \& ITk Upgrades}
+      %
+    }
 
-
-
-    
     \frame{
         \frametitle{Acknowledgements}
-        We would like to acknowledge the University of Michigan Department of Physics, specifically Jean Krisch and Tom Schwarz, and Steven Goldfarb. 
+        We would like to acknowledge the University of Michigan Department of Physics, specifically Jean Krisch, Tom Schwarz, and Steven Goldfarb. 
 
         We would also like to acknowledge the support of the Lounsbery foundation.   \\
         %More content goes here
