--- a/p1/pres.tex
+++ b/p1/pres.tex
@@ -20,19 +20,19 @@
 % Preamble
 \title[]{Readout System Enhancements for ATLAS ITk Project }
 \subtitle{}
-\author[Kyle Beyer , Dylan Hatch]{Kyle Beyer, \texorpdfstring{\url{kyle.beyer@cern.ch} \\ Dylan Hatch ,  \url{dylan.brown.hatch@cern.ch}}{Kyle Beyer , Dylan Hatch}}
+\author[Kyle Beyer , Dylan Hatch]{Kyle Beyer, \texorpdfstring{\url{kyle.beyer@cern.ch} \\ Dylan Hatch,  \url{dylan.brown.hatch@cern.ch}}{Kyle Beyer , Dylan Hatch}}
 
 % Body
 \begin{document}
-    
+
     \cernSplashBlue
 
     % Title
     {
     \setbeamertemplate{footline}{}
     \setbeamertemplate{navigation symbols}{}
-    \frame{\titlepage 
-		
+    \frame{\titlepage
+
       \begin{tikzpicture}[remember picture, overlay]
         \node[anchor=south west, %anchor is bottom left corner of the graphic
               xshift=0.5cm, %shifting around
@@ -60,12 +60,20 @@
 %    }
 
 
+    \frame{
+        \frametitle{ATLYS Board}
+        \includegraphics[width=0.5\paperwidth]{images/atlys_pic.png}
+    }
+
+    \frame{
+        \frametitle{Obstacles}
+        fuck
+    }
 
 
-    
     \frame{
         \frametitle{Acknowledgements}
-        We would like to acknowledge the University of Michigan Department of Physics, specifically Jean Krisch and Tom Schwarz, and Steven Goldfarb. 
+        We would like to acknowledge the University of Michigan Department of Physics, specifically Jean Krisch and Tom Schwarz, and Steven Goldfarb.
 
         We would also like to acknowledge the support of the Lounsbery foundation.   \\
         %More content goes here
@@ -83,12 +91,11 @@
        at (current page.south east) %left bottom corner of the page
         {	\includegraphics[width=0.33\paperwidth]{p1-figs/okto.jpg} };
 			\end{tikzpicture}
-        
-        
+
+
     }
 
     \section{}
     \cernSplashWhite
 
 \end{document}
-
