Added more chip-picture slides.

--- a/p1/pres.tex
+++ b/p1/pres.tex
@@ -59,10 +59,39 @@
 %        \end{multicols}
 %    }
 
+%%%%%%%%%%%%% Begin Dylan Stuff %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+    \frame{
+        \frametitle{Current DAQ Readout Chain}
+        \begin{columns}[c]
+            \column{0.75\textwidth}
+            \includegraphics[width=1.0\textwidth]{images/readout_chain.jpg}
+
+            \column{0.25\textwidth}
+            A look at the fully assembled readout chain.
+        \end{columns}
+    }
 
     \frame{
         \frametitle{ATLYS Board}
-        \includegraphics[width=0.5\paperwidth]{images/atlys_pic.png}
+        \begin{columns}[c]
+            \column{0.5\textwidth}
+            \includegraphics[width=1.0\textwidth]{images/atlys_pic.png}
+
+            \column{0.5\textwidth}
+            ATLYS is a low cost, widely available board that supports single chip, hybrid, and module tests.
+        \end{columns}
+    }
+
+    \frame{
+        \frametitle{ABCN25 Hybrid}
+        \begin{columns}[c]
+            \column{0.7\textwidth}
+            \includegraphics[width=1.0\textwidth]{images/ATLYS250_Hybrid.JPG}
+
+            \column{0.3\textwidth}
+            Hybrid configuration.
+        \end{columns}
     }
 
     \frame{
