Added still more images and slides.

--- a/p1/pres.tex
+++ b/p1/pres.tex
@@ -84,13 +84,35 @@
     }
 
     \frame{
-        \frametitle{ABCN25 Hybrid}
+        \frametitle{Interface Connection}
         \begin{columns}[c]
             \column{0.7\textwidth}
-            \includegraphics[width=1.0\textwidth]{images/ATLYS250_Hybrid.JPG}
+            \includegraphics[width=1.0\textwidth]{images/ATLYSwithVMOD-IB.jpg}
 
             \column{0.3\textwidth}
-            Hybrid configuration.
+            The ATLYS board is connected to to its interface board, VMOD-IB.
+        \end{columns}
+    }
+
+    \frame{
+        \frametitle{Hybrid Board}
+        \begin{columns}[c]
+            \column{0.7\textwidth}
+            \includegraphics[width=1.0\textwidth]{images/hybrid_board.jpg}
+
+            \column{0.3\textwidth}
+            Orientation of the power, ABC130, and ATLYS connections.
+        \end{columns}
+    }
+
+    \frame{
+        \frametitle{ABC130 Single Chip Test Card}
+        \begin{columns}[c]
+            \column{0.4\textwidth}
+            \includegraphics[width=1.0\textwidth]{images/ABC130_card.jpg}
+
+            \column{0.6\textwidth}
+            Test card, with connection to the Hybrid chip.
         \end{columns}
     }
 
