--- a/p1/pres.tex
+++ b/p1/pres.tex
@@ -543,29 +543,27 @@
 
     \frame{
         \frametitle{Acknowledgements}
-
-        \vspace{-2.0cm}
-
-
-        We would like to acknowledge the University of Michigan Department of Physics,\\ specifically Jean Krisch, Tom Schwarz, and Steven Goldfarb. 
-
+        
+       \begin{minipage}{\textwidth}
+        We would like to acknowledge the University of Michigan Department of Physics,\\ 
+        specifically Jean Krisch, Tom Schwarz, and Steven Goldfarb.
         We would also like to acknowledge the support of the Lounsbery foundation.   \\
+       \end{minipage}  
 
 
         \begin{minipage}{\textwidth}
 
-          \begin{tikzpicture}[remember picture, overlay]
-            \node[anchor=south west, %anchor is bottom left corner of the graphic
-                  xshift=2.4cm ]
-           at (current page.south west) %left bottom corner of the page
-            { \includegraphics[scale=0.05,trim={0 0 0 35cm },clip]
-            {p1-figs/cham.jpg} };
-
-            \node[anchor=south east, %anchor is bottom left corner of the graphic
-                  xshift=-2.4cm]
-           at (current page.south east) %left bottom corner of the page
-            {	\includegraphics[width=0.33\paperwidth]{p1-figs/okto.jpg} };
-          \end{tikzpicture}
+          \begin{figure}
+            \centering
+            \begin{subfigure}
+              \centering
+               \includegraphics[scale=0.05,trim={0 0 0 35cm },clip]{p1-figs/cham.jpg} 
+            \end{subfigure}
+            \begin{subfigure}
+              \centering
+              	\includegraphics[width=0.33\paperwidth]{p1-figs/okto.jpg} 
+            \end{subfigure}
+          \end{figure}
 
         \end{minipage}  
 
