--- a/p1/pres.tex
+++ b/p1/pres.tex
@@ -118,7 +118,12 @@
 
     \frame{
         \frametitle{Obstacles}
-        fuck
+        \begin{itemize}
+            \item We accidentally lost a configuration and register assignment file on a formatted Windows SSD.
+            \item We have a segmentation violation in the GUI of the ITSDAQ software.
+            \item We have a compile error due to the absence of a header file supposedly in the NI-VISA library.
+            \item Our new installation of the NI-VISA library has caused problems with gnome on the workstation.
+        \end{itemize}
     }
 
 
