--- a/p1/pres.tex
+++ b/p1/pres.tex
@@ -48,7 +48,7 @@
 \def\mydate{11 Oct 2018}
 
 % Preamble
-\title[]{Readout System Enhancements for ATLAS ITk Project }
+\title[]{Readout Chain Testing for ATLAS ITk Project }
 \subtitle{}
 \author[Kyle Beyer , Dylan Hatch]
 {Kyle Beyer, \texorpdfstring{\url{kyle.beyer@cern.ch} \\ 
