Added box formatting to test setup slides.

--- a/p1/pres.tex
+++ b/p1/pres.tex
@@ -51,7 +51,7 @@
 \title[]{Readout Chain Testing for ATLAS ITk Strip Detector}
 \subtitle{}
 \author[Kyle Beyer , Dylan Hatch]
-{Kyle Beyer, \texorpdfstring{\url{kyle.beyer@cern.ch} \\ 
+{Kyle Beyer, \texorpdfstring{\url{kyle.beyer@cern.ch} \\
 Dylan Hatch,  \url{dylan.brown.hatch@cern.ch}         \\
 Mentors: Richard Teuser \& Olivier Arnaez
 }{Kyle Beyer , Dylan Hatch}}
@@ -94,10 +94,10 @@ Mentors: Richard Teuser \& Olivier Arnaez
     }
 
     \section{Background}
-    
+
     \subsection{ATLAS \& the Inner Detector}
 
-    
+
     % ============================================================== %
     %
     % ATLAS & Inner Detector
@@ -116,7 +116,7 @@ Mentors: Richard Teuser \& Olivier Arnaez
               \item Muon Spectrometer
             \end{itemize}
           \end{block}
-        
+
           \begin{block}{ Inner Detector }
             \begin{itemize}
               \item Pixel Detector (PIX)
@@ -127,12 +127,12 @@ Mentors: Richard Teuser \& Olivier Arnaez
 
         \end{column}
         \begin{column}{.5\textwidth}
-          
+
           \vspace{-1.5cm}
           \begin{figure}
 						\includegraphics[width=0.85\textwidth]{p1-figs/atlas.png}
 				 	\end{figure}
-					
+
           \vspace{-0.8cm}
           \begin{figure}
 						\includegraphics[width=0.85\textwidth]{p1-figs/id.jpg}
@@ -140,18 +140,18 @@ Mentors: Richard Teuser \& Olivier Arnaez
 
         \end{column}
         \end{columns}
-    
+
     }
-    
+
     \subsection{HL-LHC \& ITk}
-    
+
 
     % ============================================================== %
     %
     % HL-LHC & ITK Frame
     %
     % ============================================================== %
-    
+
     \frame{
       \frametitle{High Luminosity LHC \& ITk Upgrades}
       %
@@ -161,7 +161,7 @@ Mentors: Richard Teuser \& Olivier Arnaez
 
         \begin{block}{ $x10$ increase in instantaneous luminosity! }
             \begin{itemize}
-              \item $L = $\num{1e73} fb$^{-1}$ s$^{-1} \rightarrow 
+              \item $L = $\num{1e73} fb$^{-1}$ s$^{-1} \rightarrow
                      L = $ \num{1e74} fb$^{-1}$ s$^{-1} $ \\
             \end{itemize}
           \end{block}
@@ -198,8 +198,8 @@ Mentors: Richard Teuser \& Olivier Arnaez
             \end{figure}
           \end{column}
           \end{columns}
-        
-        \end{minipage}  
+
+        \end{minipage}
 
     }
 
@@ -212,7 +212,7 @@ Mentors: Richard Teuser \& Olivier Arnaez
 
         \begin{block}{ $x10$ increase in instantaneous luminosity! }
             \begin{itemize}
-              \item $L = $\num{1e73} fb$^{-1}$ s$^{-1} \rightarrow 
+              \item $L = $\num{1e73} fb$^{-1}$ s$^{-1} \rightarrow
                      L = $ \num{1e74} fb$^{-1}$ s$^{-1} $ \\
               \item \bf{More particles, more problems}
             \end{itemize}
@@ -230,7 +230,7 @@ Mentors: Richard Teuser \& Olivier Arnaez
         \end{column}
         \end{columns}
 
-        
+
         \begin{minipage}{\textwidth}
           \begin{columns}[T,onlytextwidth]
           \begin{column}{.5\textwidth}
@@ -249,11 +249,11 @@ Mentors: Richard Teuser \& Olivier Arnaez
             \end{figure}
           \end{column}
           \end{columns}
-        
-        \end{minipage}  
+
+        \end{minipage}
 
     }
-    
+
     \frame{
       \frametitle{High Luminosity LHC \& ITk Upgrades}
       %
@@ -263,7 +263,7 @@ Mentors: Richard Teuser \& Olivier Arnaez
 
         \begin{block}{ $x10$ increase in instantaneous luminosity! }
             \begin{itemize}
-              \item $L = $\num{1e73} fb$^{-1}$ s$^{-1} \rightarrow 
+              \item $L = $\num{1e73} fb$^{-1}$ s$^{-1} \rightarrow
                      L = $ \num{1e74} fb$^{-1}$ s$^{-1} $ \\
               \item \bf{More particles, more problems}
             \end{itemize}
@@ -290,10 +290,10 @@ Mentors: Richard Teuser \& Olivier Arnaez
                 \item trigger readout
             \end{itemize}
           \end{block}
-        \end{minipage}  
+        \end{minipage}
 
     }
-    
+
     \frame{
       \frametitle{High Luminosity LHC \& ITk Upgrades}
       %
@@ -303,7 +303,7 @@ Mentors: Richard Teuser \& Olivier Arnaez
 
         \begin{block}{ $x10$ increase in instantaneous luminosity! }
             \begin{itemize}
-              \item $L = $\num{1e73} fb$^{-1}$ s$^{-1} \rightarrow 
+              \item $L = $\num{1e73} fb$^{-1}$ s$^{-1} \rightarrow
                      L = $ \num{1e74} fb$^{-1}$ s$^{-1} $ \\
               \item \bf{More particles, more problems}
             \end{itemize}
@@ -324,15 +324,15 @@ Mentors: Richard Teuser \& Olivier Arnaez
         \begin{minipage}{\textwidth}
           \begin{block}{ The inner detector has insufficient:}
             \begin{itemize}
-              \item radiation hardness: HL-LHC will deliver 4000 fb$^{-1}$  fluence. 
-                    ID PIX is designed for 400 fb$^{-1}$, ID SCT for 700 fb$^{-1}$, 
+              \item radiation hardness: HL-LHC will deliver 4000 fb$^{-1}$  fluence.
+                    ID PIX is designed for 400 fb$^{-1}$, ID SCT for 700 fb$^{-1}$,
                     IBL for 800 fb$^{-1}$
             \end{itemize}
           \end{block}
-        \end{minipage}  
+        \end{minipage}
 
     }
-    
+
     \frame{
       \frametitle{High Luminosity LHC \& ITk Upgrades}
       %
@@ -342,7 +342,7 @@ Mentors: Richard Teuser \& Olivier Arnaez
 
         \begin{block}{ $x10$ increase in instantaneous luminosity! }
             \begin{itemize}
-              \item $L = $\num{1e73} fb$^{-1}$ s$^{-1} \rightarrow 
+              \item $L = $\num{1e73} fb$^{-1}$ s$^{-1} \rightarrow
                      L = $ \num{1e74} fb$^{-1}$ s$^{-1} $ \\
               \item \bf{More particles, more problems}
             \end{itemize}
@@ -364,21 +364,21 @@ Mentors: Richard Teuser \& Olivier Arnaez
           \begin{block}{ The inner detector has insufficient:}
             \begin{itemize}
               \item granularity: Increasing fluence means higher granularity is needed to maintain performance; compensate for instrinsic dead time
-                % -- in all detectors you have whats called dead time; 
-                %    in semiconducotr detectors, as charged particles stream through the 
+                % -- in all detectors you have whats called dead time;
+                %    in semiconducotr detectors, as charged particles stream through the
                 %    semiconductor, it loses particles to valence electrons and promotes them
-                %    to the conduction band, and, because of the bias voltage across the device they   
-                %    drift to the anode, where the signal is readout. 
-                %    If another particle enters the detector volume during the electron drift time, 
+                %    to the conduction band, and, because of the bias voltage across the device they
+                %    drift to the anode, where the signal is readout.
+                %    If another particle enters the detector volume during the electron drift time,
                 %    either you'll distort the output signal due to the pulses piling up, or youll
-                %    miss the 2nd pulse entirely. To mitigate this loss/distortion of events, 
+                %    miss the 2nd pulse entirely. To mitigate this loss/distortion of events,
                 %    we make our detectors smaller and increase the number of readout channels
             \end{itemize}
           \end{block}
-        \end{minipage}  
+        \end{minipage}
 
     }
-    
+
     \frame{
       \frametitle{High Luminosity LHC \& ITk Upgrades}
       %
@@ -388,7 +388,7 @@ Mentors: Richard Teuser \& Olivier Arnaez
 
         \begin{block}{ $x10$ increase in instantaneous luminosity! }
             \begin{itemize}
-              \item $L = $\num{1e73} fb$^{-1}$ s$^{-1} \rightarrow 
+              \item $L = $\num{1e73} fb$^{-1}$ s$^{-1} \rightarrow
                      L = $ \num{1e74} fb$^{-1}$ s$^{-1} $ \\
               \item \bf{More particles, more problems}
             \end{itemize}
@@ -412,10 +412,10 @@ Mentors: Richard Teuser \& Olivier Arnaez
                 \item readout bandwidth: HL-LHC will roughly quadruple ID designed bandwidth saturation
             \end{itemize}
           \end{block}
-        \end{minipage}  
+        \end{minipage}
 
     }
-    
+
     \frame{
       \frametitle{High Luminosity LHC \& ITk Upgrades}
       %
@@ -425,7 +425,7 @@ Mentors: Richard Teuser \& Olivier Arnaez
 
         \begin{block}{ $x10$ increase in instantaneous luminosity! }
             \begin{itemize}
-              \item $L = $\num{1e73} fb$^{-1}$ s$^{-1} \rightarrow 
+              \item $L = $\num{1e73} fb$^{-1}$ s$^{-1} \rightarrow
                      L = $ \num{1e74} fb$^{-1}$ s$^{-1} $ \\
               \item \bf{More particles, more problems}
             \end{itemize}
@@ -449,10 +449,10 @@ Mentors: Richard Teuser \& Olivier Arnaez
               \item trigger readout: readout chain must accomadate much higher hardware (level 1) trigger rate, and ideally include tracking info
             \end{itemize}
           \end{block}
-        \end{minipage}  
+        \end{minipage}
 
     }
-    
+
     \frame{
       \frametitle{High Luminosity LHC \& ITk Upgrades}
       %
@@ -462,7 +462,7 @@ Mentors: Richard Teuser \& Olivier Arnaez
 
         \begin{block}{ $x10$ increase in instantaneous luminosity! }
             \begin{itemize}
-              \item $L = $\num{1e73} fb$^{-1}$ s$^{-1} \rightarrow 
+              \item $L = $\num{1e73} fb$^{-1}$ s$^{-1} \rightarrow
                      L = $ \num{1e74} fb$^{-1}$ s$^{-1} $ \\
               \item \bf{More particles, more problems}
             \end{itemize}
@@ -482,10 +482,10 @@ Mentors: Richard Teuser \& Olivier Arnaez
 
         \begin{minipage}{\textwidth}
           \begin{block}{\large{\bf{Goal of ITk:}} }
-            \large{\bf{Same or better performance than ID in 
-            harsh environment of HL-LHC}} 
+            \large{\bf{Same or better performance than ID in
+            harsh environment of HL-LHC}}
           \end{block}
-        \end{minipage}  
+        \end{minipage}
     }
 
     \subsection{ITk Design and Readout}
@@ -499,7 +499,7 @@ Mentors: Richard Teuser \& Olivier Arnaez
     \end{itemize}
     \end{minipage}
     \vspace{-0.1cm}
-    
+
     \begin{minipage}{\textwidth}
 
         % design
@@ -521,25 +521,25 @@ Mentors: Richard Teuser \& Olivier Arnaez
           \end{itemize}
 
           \vspace{-0.4cm}
-          
+
 					\begin{figure}
 						\includegraphics[trim={0cm 0cm 0cm 0cm},clip,width=0.8\textwidth]{p1-figs/stave_petal.png}
 				 	\end{figure}
 
     }
-    
+
     \frame{
       \frametitle{ITk Strip Detector Readout}
       % ignoring pixel detector
         \vspace{-0.2cm}
         \begin{itemize}
           \item sensor $\rightarrow$ front-end ASIC for signal amplification
-            shaping, \& discrimination 
+            shaping, \& discrimination
           \item 10-12 ABC ASICs per hybrid; each ASIC reads out 256 ch
-          \item Hybrid Controller Chip interfaces the stave/petal service bus \& front-end ASICs 
+          \item Hybrid Controller Chip interfaces the stave/petal service bus \& front-end ASICs
         \end{itemize}
         \vspace{-0.2cm}
-          
+
 				\begin{figure}
 					\includegraphics[trim={0cm 0cm 0cm 0cm},clip,width=0.5\textwidth]{p1-figs/module.png}
 				\end{figure}
@@ -547,13 +547,13 @@ Mentors: Richard Teuser \& Olivier Arnaez
     }
 
 
-   
+
     % ============================================================== %
     %
     % Our Progress
     %
     % ============================================================== %
-    
+
     \section{Lab Testing of Hybrid Chips}
     \subsection{Testing Setup}
 
@@ -564,7 +564,9 @@ Mentors: Richard Teuser \& Olivier Arnaez
             \includegraphics[width=1.0\textwidth]{images/readout_chain.jpg}
 
             \column{0.25\textwidth}
-            A look at the fully assembled readout chain.
+            \begin{block}{}
+                A look at the fully assembled readout chain.
+            \end{block}
         \end{columns}
     }
 
@@ -575,7 +577,9 @@ Mentors: Richard Teuser \& Olivier Arnaez
             \includegraphics[width=1.0\textwidth]{images/atlys_pic.png}
 
             \column{0.5\textwidth}
-            ATLYS is a low cost, widely available board that supports single chip, hybrid, and module tests.
+            \begin{block}{}
+                ATLYS is a low cost, widely available board that supports single chip, hybrid, and module tests.
+            \end{block}
         \end{columns}
     }
 
@@ -586,7 +590,9 @@ Mentors: Richard Teuser \& Olivier Arnaez
             \includegraphics[width=1.0\textwidth]{images/ATLYSwithVMOD-IB.jpg}
 
             \column{0.3\textwidth}
-            The ATLYS board is connected to to its interface board, VMOD-IB.
+            \begin{block}{}
+                The ATLYS board is connected to to its interface board, VMOD-IB.
+            \end{block}
         \end{columns}
     }
 
@@ -597,7 +603,9 @@ Mentors: Richard Teuser \& Olivier Arnaez
             \includegraphics[width=0.8\textwidth]{images/hybrid_board.jpg}
 
             \column{0.3\textwidth}
-            Orientation of the power, ABC130, and ATLYS connections.
+            \begin{block}{}
+                Orientation of the power, ABC130, and ATLYS connections.
+            \end{block}
         \end{columns}
     }
 
@@ -608,10 +616,12 @@ Mentors: Richard Teuser \& Olivier Arnaez
             \includegraphics[width=1.0\textwidth]{images/ABC130_card.jpg}
 
             \column{0.6\textwidth}
-            Test card, with connection to the Hybrid chip.
+            \begin{block}{}
+                Test card, with connection to the Hybrid chip.
+            \end{block}
         \end{columns}
     }
-    
+
     \subsection{Progress \& Goals}
 
     \frame{
@@ -619,7 +629,7 @@ Mentors: Richard Teuser \& Olivier Arnaez
       \begin{block}{Progress}
         \begin{itemize}
             \item Preliminary tests with ITSDAQ software
-            \item Able to run correct versions of NI-VISA, NI-DAQMX Base, and NI-488.2 and communicate with devices 
+            \item Able to run correct versions of NI-VISA, NI-DAQMX Base, and NI-488.2 and communicate with devices
         \end{itemize}
       \end{block}
       \begin{block}{Obstacles}
@@ -630,36 +640,36 @@ Mentors: Richard Teuser \& Olivier Arnaez
         \end{itemize}
       \end{block}
     }
-    
+
     \frame{
       \frametitle{Goals}
       \begin{block}{}
         \begin{itemize}
-            \item Get ITSDAQ working 
+            \item Get ITSDAQ working
             \item Solve NI-VISA issues and run HV controller through ITSDAQ
             \item  Integrate FELIX chip (optical, rad-hardened comm protocol drivers) into readout chain
         \end{itemize}
       \end{block}
     }
-    
+
 
     % ============================================================== %
     %
     % Acknowledgements
     %
     % ============================================================== %
-    
+
     \section{Acknowledgements}
-    
+
 
     \frame{
         \frametitle{Acknowledgements}
-        
+
        \begin{minipage}{\textwidth}
-        We would like to acknowledge the University of Michigan Department of Physics,\\ 
+        We would like to acknowledge the University of Michigan Department of Physics,\\
         specifically Jean Krisch, Tom Schwarz, and Steven Goldfarb.
         We would also like to acknowledge the support of the Lounsbery foundation.   \\
-       \end{minipage}  
+       \end{minipage}
 
 
         \begin{minipage}{\textwidth}
@@ -668,15 +678,15 @@ Mentors: Richard Teuser \& Olivier Arnaez
             \centering
             \begin{subfigure}
               \centering
-               \includegraphics[scale=0.05,trim={0 0 0 35cm },clip]{p1-figs/cham.jpg} 
+               \includegraphics[scale=0.05,trim={0 0 0 35cm },clip]{p1-figs/cham.jpg}
             \end{subfigure}
             \begin{subfigure}
               \centering
-              	\includegraphics[width=0.33\paperwidth]{p1-figs/okto.jpg} 
+              	\includegraphics[width=0.33\paperwidth]{p1-figs/okto.jpg}
             \end{subfigure}
           \end{figure}
 
-        \end{minipage}  
+        \end{minipage}
 
     }
 
