--- a/p1/pres.tex
+++ b/p1/pres.tex
@@ -53,7 +53,7 @@
 \author[Kyle Beyer , Dylan Hatch]
 {Kyle Beyer, \texorpdfstring{\url{kyle.beyer@cern.ch} \\
 Dylan Hatch,  \url{dylan.brown.hatch@cern.ch}         \\
-Mentors: Richard Teuser \& Olivier Arnaez
+Mentors: Richard Teuscher \& Olivier Arnaez
 }{Kyle Beyer , Dylan Hatch}}
 
 % Body
@@ -159,10 +159,10 @@ Mentors: Richard Teuser \& Olivier Arnaez
         \begin{columns}[T,onlytextwidth]
         \begin{column}{.54\textwidth}
 
-        \begin{block}{ $x10$ increase in instantaneous luminosity! }
+        \begin{block}{ $3x$ increase in instantaneous luminosity! }
             \begin{itemize}
-              \item $L = $\num{1e73} fb$^{-1}$ s$^{-1} \rightarrow
-                     L = $ \num{1e74} fb$^{-1}$ s$^{-1} $ \\
+              \item $L = $\num{2e73} fb$^{-1}$ s$^{-1} \rightarrow
+                     L = $ \num{7e73} fb$^{-1}$ s$^{-1} $ \\
             \end{itemize}
           \end{block}
 
@@ -210,11 +210,11 @@ Mentors: Richard Teuser \& Olivier Arnaez
         \begin{columns}[T,onlytextwidth]
         \begin{column}{.54\textwidth}
 
-        \begin{block}{ $x10$ increase in instantaneous luminosity! }
+        \begin{block}{ $3x$ increase in instantaneous luminosity! }
             \begin{itemize}
-              \item $L = $\num{1e73} fb$^{-1}$ s$^{-1} \rightarrow
-                     L = $ \num{1e74} fb$^{-1}$ s$^{-1} $ \\
-              \item \bf{More particles, more problems}
+              \item $L = $\num{2e73} fb$^{-1}$ s$^{-1} \rightarrow
+                     L = $ \num{7e73} fb$^{-1}$ s$^{-1} $ \\
+              \item {\bf More particles, more problems}
             \end{itemize}
           \end{block}
 
@@ -261,11 +261,10 @@ Mentors: Richard Teuser \& Olivier Arnaez
         \begin{columns}[T,onlytextwidth]
         \begin{column}{.54\textwidth}
 
-        \begin{block}{ $x10$ increase in instantaneous luminosity! }
+        \begin{block}{ $3x$ increase in instantaneous luminosity! }
             \begin{itemize}
-              \item $L = $\num{1e73} fb$^{-1}$ s$^{-1} \rightarrow
-                     L = $ \num{1e74} fb$^{-1}$ s$^{-1} $ \\
-              \item \bf{More particles, more problems}
+              \item $L = $\num{2e73} fb$^{-1}$ s$^{-1} \rightarrow
+                     L = $ \num{7e73} fb$^{-1}$ s$^{-1} $ \\
             \end{itemize}
           \end{block}
 
@@ -301,11 +300,10 @@ Mentors: Richard Teuser \& Olivier Arnaez
         \begin{columns}[T,onlytextwidth]
         \begin{column}{.54\textwidth}
 
-        \begin{block}{ $x10$ increase in instantaneous luminosity! }
+        \begin{block}{ $3x$ increase in instantaneous luminosity! }
             \begin{itemize}
-              \item $L = $\num{1e73} fb$^{-1}$ s$^{-1} \rightarrow
-                     L = $ \num{1e74} fb$^{-1}$ s$^{-1} $ \\
-              \item \bf{More particles, more problems}
+              \item $L = $\num{2e73} fb$^{-1}$ s$^{-1} \rightarrow
+                     L = $ \num{7e73} fb$^{-1}$ s$^{-1} $ \\
             \end{itemize}
           \end{block}
 
@@ -324,7 +322,7 @@ Mentors: Richard Teuser \& Olivier Arnaez
         \begin{minipage}{\textwidth}
           \begin{block}{ The inner detector has insufficient:}
             \begin{itemize}
-              \item radiation hardness: HL-LHC will deliver 4000 fb$^{-1}$  fluence.
+              \item radiation hardness: HL-LHC will deliver 4000 fb$^{-1}$  integrated luminosity,
                     ID PIX is designed for 400 fb$^{-1}$, ID SCT for 700 fb$^{-1}$,
                     IBL for 800 fb$^{-1}$
             \end{itemize}
@@ -340,11 +338,10 @@ Mentors: Richard Teuser \& Olivier Arnaez
         \begin{columns}[T,onlytextwidth]
         \begin{column}{.54\textwidth}
 
-        \begin{block}{ $x10$ increase in instantaneous luminosity! }
+        \begin{block}{ $3x$ increase in instantaneous luminosity! }
             \begin{itemize}
-              \item $L = $\num{1e73} fb$^{-1}$ s$^{-1} \rightarrow
-                     L = $ \num{1e74} fb$^{-1}$ s$^{-1} $ \\
-              \item \bf{More particles, more problems}
+              \item $L = $\num{2e73} fb$^{-1}$ s$^{-1} \rightarrow
+                     L = $ \num{7e73} fb$^{-1}$ s$^{-1} $ \\
             \end{itemize}
           \end{block}
 
@@ -386,10 +383,10 @@ Mentors: Richard Teuser \& Olivier Arnaez
         \begin{columns}[T,onlytextwidth]
         \begin{column}{.54\textwidth}
 
-        \begin{block}{ $x10$ increase in instantaneous luminosity! }
+        \begin{block}{ $3x$ increase in instantaneous luminosity! }
             \begin{itemize}
-              \item $L = $\num{1e73} fb$^{-1}$ s$^{-1} \rightarrow
-                     L = $ \num{1e74} fb$^{-1}$ s$^{-1} $ \\
+              \item $L = $\num{2e73} fb$^{-1}$ s$^{-1} \rightarrow
+                     L = $ \num{7e73} fb$^{-1}$ s$^{-1} $ \\
               \item \bf{More particles, more problems}
             \end{itemize}
           \end{block}
@@ -565,7 +562,7 @@ Mentors: Richard Teuser \& Olivier Arnaez
 
             \column{0.25\textwidth}
             \begin{block}{}
-                A look at the fully assembled readout chain.
+                A look at the fully assembled readout chain, ending in the ABC130 prototype test board.
             \end{block}
         \end{columns}
     }
@@ -597,7 +594,7 @@ Mentors: Richard Teuser \& Olivier Arnaez
     }
 
     \frame{
-        \frametitle{Hybrid Board}
+        \frametitle{Driver Board}
         \begin{columns}[c]
             \column{0.7\textwidth}
             \includegraphics[width=0.8\textwidth]{images/hybrid_board.jpg}
@@ -617,7 +614,7 @@ Mentors: Richard Teuser \& Olivier Arnaez
 
             \column{0.6\textwidth}
             \begin{block}{}
-                Test card, with connection to the Hybrid chip.
+                Test card, with connection to the driver board.
             \end{block}
         \end{columns}
     }
