added figs for p1

--- a/p2/pres.tex
+++ b/p2/pres.tex
@@ -637,6 +637,22 @@ Mentors: Richard Teuscher \& Olivier Arnaez
         \end{itemize}
       \end{block}
     }
+    \frame{
+      \frametitle{3 Point Gain}
+      Measures gain \& noise at 3 power supply currents
+				\begin{figure}
+					\includegraphics[trim={0cm 0cm 0cm 0cm},clip,width=0.5\textwidth]{p1-figs/3pg1.png}
+				\end{figure}
+      
+    }
+    \frame{
+      \frametitle{3 Point Gain}
+      Measures gain \& noise at 3 power supply currents
+				\begin{figure}
+					\includegraphics[trim={0cm 0cm 0cm 0cm},clip,width=0.5\textwidth]{p1-figs/3pg2.png}
+				\end{figure}
+      
+    }
 
     \frame{
       \frametitle{Goals}
