--- a/p3/pres.tex
+++ b/p3/pres.tex
@@ -691,23 +691,57 @@ Mentors: Richard Teuscher \& Olivier Arnaez
       \begin{block}{Progress}
         \begin{itemize}
             \item Able to run correct versions of NI-VISA, NI-DAQMX Base, and NI-488.2 and communicate with devices
-            \item Able to successfully interface with the ATLYS board
             \item Able to use the ITSDAQ software to run tests on actual chips
+            \item Resolved 3-point voltage gain problem
         \end{itemize}
       \end{block}
       \begin{block}{Obstacles}
         \begin{itemize}
             \item The cabling connections to both the power supply and the ABC chips have been very sensitive
-            \item The distributions generated from a 3-point voltage gain test are far too wide
+            \item Firmware issues with the on the ATLYS connected to the hybrid chip
         \end{itemize}
       \end{block}
+    }
+
+    \frame{
+      \frametitle{3 Point Gain Not Working}
+      Measures gain \& noise at 3 power supply currents
+				\begin{figure}
+					\includegraphics[trim={0cm 0cm 0cm 0cm},clip,width=0.5\textwidth]{images/3pg1.png}
+				\end{figure}
+
+    }
+    \frame{
+      \frametitle{3 Point Gain Not Working}
+      Measures gain \& noise at 3 power supply currents
+				\begin{figure}
+					\includegraphics[trim={0cm 0cm 0cm 0cm},clip,width=0.5\textwidth]{images/3pg2.png}
+				\end{figure}
+
+    }
+
+    \frame{
+      \frametitle{3 Point Gain Working}
+      Measures gain \& noise at 3 power supply currents
+				\begin{figure}
+					\includegraphics[trim={0cm 0cm 0cm 0cm},clip,width=0.5\textwidth]{images/good_noise.png}
+				\end{figure}
+
+    }
+    \frame{
+      \frametitle{3 Point Gain Working}
+      Measures gain \& noise at 3 power supply currents
+				\begin{figure}
+					\includegraphics[trim={0cm 0cm 0cm 0cm},clip,width=0.5\textwidth]{images/good_3PG.png}
+				\end{figure}
+
     }
 
     \frame{
       \frametitle{Goals}
       \begin{block}{}
         \begin{itemize}
-            \item Resolve strange 3-point gain behavior
+            \item Resolve ATLYS hybrid firmware issues
             \item Obtain a stable cabling setup
             \item Integrate FELIX chip (optical, rad-hardened comm protocol drivers) into readout chain
         \end{itemize}
@@ -740,14 +774,17 @@ Mentors: Richard Teuscher \& Olivier Arnaez
             \centering
             \begin{subfigure}
               \centering
-               \includegraphics[scale=0.05,trim={0 0 0 35cm },clip]{p1-figs/cham.jpg}
+               \includegraphics[scale=0.04,trim={0 0 0 35cm },clip]{p1-figs/cham.jpg}
             \end{subfigure}
             \begin{subfigure}
               \centering
-              	\includegraphics[width=0.33\paperwidth]{p1-figs/okto.jpg}
+              	\includegraphics[width=0.25\paperwidth]{p1-figs/okto.jpg}
+            \end{subfigure}
+            \begin{subfigure}
+              \centering
+              	\includegraphics[width=0.30\paperwidth]{images/barcelona.jpg}
             \end{subfigure}
           \end{figure}
-
         \end{minipage}
 
     }
